# Wikipedia

./: .gitignore  LICENCE.md  README.md  __init__.py  config.py  plugin.py  pyproject.toml  test.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: codeql.yml  dependabot-automerge.yml  labeler.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md
