[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limnoria-wikipedia"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Barry Suridge" }]
dependencies = ["beautifulsoup4", "requests"]
classifiers = [
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.entry-points.'limnoria.plugins']
Wikipedia = "limnoria_wikipedia"

[tool.black]
target-version = ["py310"]
extend-exclude = '''
/(
    backup
  | conf
  | data
  | logs
  | tmp
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.setuptools.package-dir]
"limnoria_wikipedia" = "."
"limnoria_wikipedia.local" = "local/"

[tool.setuptools.package-data]
"limnoria_wikipedia" = ["locales/*.po"]
